--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL="postgresql://postgres:1234@localhost:5432/panel_ventas?schema=public"
+DATABASE_URL="postgresql://postgres:ThtTHpqXbJrEOuqtCmGtGRxwUqvqnbxs@shortline.proxy.rlwy.net:27874/railway"
 JWT_SECRET="secretword"
 PORT=4000
